<resources>
    <string name="app_name">DroidBountyHunter</string>
    <string name="detail_message_label">Mensaje…</string>
    <string name="detail_capture_button">Capturar</string>
    <string name="detail_delete_button">Eliminar</string>
    <string name="detail_fugitive_still_not_catch">El fugitivo sigue suelto…</string>
    <string name="detail_fugitive_in_jail">Atrapado!!!</string>
    <string name="add_fugitive_title_screen">Nuevo Fugitivo</string>
    <string name="add_fugitive_name_hint">Nombre del Fugitivo</string>
    <string name="add_save_fugitive_button">Guardar</string>
    <string name="about_us_develop_by_label">Desarrollado por:</string>
    <string name="about_us_developer_name_label">Joaquin Valdez</string>
    <string name="about_us_developed_year_label">2022</string>
    <string name="about_us_company_name_label">D.W. Training</string>
    <string name="title_fugitives">Fugitivos</string>
    <string name="title_catch">Atrapados</string>
    <string name="title_about_us">Acerca de</string>
    <string name="action_add_fugitive">Agregar Fugitivo</string>
    <string name="add_fugitive_title_alert">Alerta</string>
    <string name="add_fugitive_message_alert">Favor de capturar el nombre del fugitivo.</string>
    <string name="deletion_logs_title">Logs</string>
    <string name="add_fugitive_from_web_service">Agregar desde servicio web</string>
    <string name="add_fugitive_error_loading_from_webservice">Ocurrió un problema con el Webservice!!</string>
    <string name="add_fugitive_error_no_empty_data">No se puede hacer la carga remota ya que se tiene al menos un fugitivo en la base de datos</string>
    <string name="detail_fugitive_title_alert">Fugitivo</string>
    <string name="detail_fugitive_take_picture">Tomar foto</string>
    <string name="detail_fugitive_no_photo_message">Es necesario tomar la foto antes de capturar al fugitivo</string>
    <string name="content_description_image_fugitive">Imagen de Fugitivo</string>
    <string name="add_fugitive_progress">Progreso %1$s</string>
    <string name="add_fugitive_add_from_xml">Agregar desde XML</string>
    <string name="add_fugitive_importation_finished">Importación finalizada!!</string>
    <string name="add_fugitive_warning_not_empty_database">No es posible solicitar carga vía XML ya que se tiene al menos un fugitivo en la base de datos</string>
    <string name="notification_service_created_message">Servicio Creado</string>
    <string name="notification_service_added_number">Añadiste: %1$d</string>
    <string name="notification_service_deleted_number">Eliminaste: %1$d</string>
    <string name="notification_service_title_notification">Notificación DroidBountyHunter</string>
    <string name="notification_service_service_running">Servicio arrancado %1$d</string>
    <string name="notification_service_service_stopped">Servicio detenido</string>
    <string name="token_firebase_service_new_token">Token recibido de Firebase: %1$s</string>
    <string name="token_firebase_service_message_from">Mensaje enviado por: %1$s</string>
    <string name="token_firebase_service_message_payload">Datos del mensaje: %1$s</string>
    <string name="token_firebase_service_message_body">Cuerpo del mensaje: %1$s</string>
    <string name="default_notification_channel_id">Android Students</string>
    <string name="fugitives">Fugitivos</string>
    <string name="captured">Capturados</string>
    <string name="button_change_widget">Fugitivos / Capturados</string>

</resources>
